// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handler returns only the loading-message when showComponentWhileLoading is false 1`] = `
<div
  className="handler"
>
  <div
    className="handler--loading"
  >
    loading...
  </div>
</div>
`;

exports[`Handler returns the Component when loading and showComponentWhileLoading is false 1`] = `
<div
  className="handler"
>
  <div>
    Test
  </div>
</div>
`;

exports[`Handler returns the loading-message and the component 1`] = `
<div
  className="handler"
>
  <div
    className="handler--loading"
  >
    loading...
  </div>
  <div>
    Test
  </div>
</div>
`;
